--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
 .App {
   text-align: center;
+  background-color: #161D29;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.App #particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,7 +23,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #161D29;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +44,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App .content h2 {
+  font-size: 5rem;
+  font-weight: 800;
+  color: #002057;
+}
+
+.App .content p {
+  font-size: 1.2rem;
+  color: #AFB2BF;
+  font-weight: 600;
+  padding: 0.5rem 0;
 }
